<resources>
    <string name="app_name">EasyShop</string>
    <string name="hii">Hii</string>
    <string name="usit">UsIt</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="all_rights_are_reserved">All rights are reserved</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Create">Create an UsIt account</string>
    <string name="One">One account for everything, UsIt</string>
    <string name="Learn">Learn more</string>
    <string name="Ramesh">Ramesh</string>
    <string name="email">xyz@gmail.com</string>
    <string name="phone">1234567890</string>
    <string name="pass">******</string>
    <string name="onl">Or Sign Up using</string>
    <string name="face">     FACEBOOK</string>
    <string name="google">google</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
</resources>