<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CD8844">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:shadowColor="#0E0E0E"
                android:text="@string/Create"
                android:textColor="#2E2D2D"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.625" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/One"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Learn"
                android:textColor="#0E5EA5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="117dp" />

            <View
                android:id="@+id/view"
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="170dp"
                android:layout_marginEnd="171dp"
                android:background="#0E5EA5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/avatar"
                    android:ems="10"
                    android:hint="@string/Ramesh"
                    android:inputType="textPersonName"
                    android:paddingStart="2dp"
                    android:textAlignment="gravity"
                    app:layout_constraintBottom_toTopOf="@+id/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.487"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/ic_baseline_phone_in_talk_24"
                    android:ems="10"
                    android:hint="  1234567890"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:ems="10"
                    android:hint="  xyz@gmail.com"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:bufferType="spannable"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:ems="10"
                    android:hint="   ********"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/btn_gradient"
                    android:text="Sign Up"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="#231F1F" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/onl" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="90dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="#231F1F" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="#3B5998"
                        android:gravity="center|left|center_vertical"
                        android:text="@string/face"
                        android:textColor="#FFFFFF"
                        app:drawableStartCompat="@drawable/ic_facebook_logo" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:background="#C3463B"
                        android:drawableLeft="@drawable/ic_google_plus"
                        android:gravity="center_vertical"
                        android:text="    GOOGLE"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="373dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Already have an account?" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_weight="1"
                        android:text="Sign In"
                        android:textColor="#0E5EA5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>